--- a/serverless.yml
+++ b/serverless.yml
@@ -64,12 +64,36 @@ functions:
 
   list:
     # Defines an HTTP API endpoint that calls the main function in list.js
-    # - path: url path is /notes
+    # - path: url path is /data4bert
     # - method: GET request
     handler: list.main
     events:
       - http:
           path: data4bert
           method: get
+          cors: true
+          authorizer: aws_iam
+
+  update:
+    # Defines an HTTP API endpoint that calls the main function in update.js
+    # - path: url path is /data4bert/{id}
+    # - method: PUT request
+    handler: update.main
+    events:
+      - http:
+          path: data4bert/{id}
+          method: put
+          cors: true
+          authorizer: aws_iam
+
+  delete:
+    # Defines an HTTP API endpoint that calls the main function in delete.js
+    # - path: url path is /data4bert/{id}
+    # - method: DELETE request
+    handler: delete.main
+    events:
+      - http:
+          path: data4bert/{id}
+          method: delete
           cors: true
           authorizer: aws_iam
